# oxeye

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  MINECRAFT_SKIN_HEAD_IMAGES_DESIGN.md  README  README.md  README.md.orig  RECENT_ACTIVITY_DESIGN.md  claude.md  trolled.md
.github/workflows/: claude-code-review.yml  docker-publish.yml
claude-code-docs/: ARCHITECTURAL_ISSUES.md  CONFIGURATION.md  ERROR_HANDLING_IMPLEMENTATION.md  INPUT_VALIDATION_IMPLEMENTATION.md  REQUEST_SIZE_LIMITS_IMPLEMENTATION.md  TEST_SUMMARY.md  TIMEOUT_IMPLEMENTATION.md
docs/: architecture-decisions.md
oxeye-backend/: Cargo.toml
oxeye-backend/src/: Dockerfile  cache.rs  config.rs  discord_commands.rs  error.rs  helpers.rs  lib.rs  main.rs  render.rs  routes.rs  validation.rs
oxeye-backend/tests/: error_response_tests.rs  integration_tests.rs
oxeye-bot/: Cargo.toml
oxeye-db/: Cargo.toml
oxeye-db/src/: cache.rs  error.rs  lib.rs  models.rs
oxeye-mod/: .gitignore  build.gradle  gradle.properties  mod_design.md
oxeye-mod/src/client/java/org/adhiadhi/oxeyeMod/client/: OxeyeModDataGenerator.java
oxeye-mod/src/main/java/org/adhiadhi/oxeyeMod/: OxeyeCommands.java  OxeyeConfig.java  OxeyeEvents.java  OxeyeHttp.java  OxeyeMod.java  SkinUtil.java  SyncManager.java
