[workspace]
resolver = "2"
members = [
    "oxeye-bot",
    "oxeye-backend",
    "oxeye-db",
]

[workspace.dependencies]
# Web framework
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.6"
oxeye-db = { path = "oxeye-db" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Discord
poise = "0.6.1"
