[package]
name = "oxeye-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
axum-extra = { workspace = true }
headers = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
oxeye-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
poise = { workspace = true }
rand = "0.10.0-rc.5"
sha2 = "0.10.9"
