[package]
name = "oxeye-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
